WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134633
REGRESSION(
r159345
): Lines are clipped between pages when printing web content from Safari
https://bugs.webkit.org/show_bug.cgi?id=134633
Summary
REGRESSION(r159345): Lines are clipped between pages when printing web conten...
Antti Koivisto
Reported
2014-07-04 06:39:53 PDT
Simple line layout needs to be disabled during printing.
Attachments
patch
(20.08 KB, patch)
2014-07-04 06:45 PDT
,
Antti Koivisto
zalan
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2014-07-04 06:45:47 PDT
Created
attachment 234407
[details]
patch
Antti Koivisto
Comment 2
2014-07-04 06:46:22 PDT
<
rdar://problem/17088936
>
Antti Koivisto
Comment 3
2014-07-04 06:56:54 PDT
https://trac.webkit.org/r170805
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug