REGRESSION(r159345): Lines are clipped between pages when printing web content from Safari https://bugs.webkit.org/show_bug.cgi?id=134633

Source/WebCore:
<rdar://problem/17088936>

Reviewed by Zalan Bujtas.

Test: printing/simple-lines-break.html

* rendering/SimpleLineLayout.cpp:
(WebCore::SimpleLineLayout::canUseFor):

    Disable simple lines if global pagination is enabled.
    Printing does not currently use flow threads which we already test for.

LayoutTests:

Reviewed by Zalan Bujtas.

* printing/simple-lines-break-expected.html: Added.
* printing/simple-lines-break.html: Added.



Canonical link: https://commits.webkit.org/152609@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@170805 268f45cc-cd09-0410-ab3c-d52691b4dbfc